chocoguy: some code added

--- a/source/public/scss/app.scss
+++ b/source/public/scss/app.scss
@@ -4,3 +4,19 @@
     box-sizing: border-box;
     font-family: sans-serif;
 }
+
+.Home{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+  }
+  
+  .HomeBtn{
+    color: #000000;
+    border: none;
+    font-size: 40px;
+  }
+  
+  .AddFlashCardDiv{
+    grid-column: 1/3;
+  }
